# augustus

./: .gitignore  CLAUDE.md  FOR-AUTHOR.md  README.md  pyproject.toml
.claude/skills/augustus-commit-conventions/: SKILL.md
.claude/skills/augustus-documentation-style/: SKILL.md
.claude/skills/augustus-project-context/: SKILL.md
.claude/skills/augustus-rag-standards/: SKILL.md
.claude/skills/augustus-repo-structure/: SKILL.md
docs/: architecture.md  quickstart.md
examples/: README.md
src/augustus/: __init__.py  cli.py  config.py
src/augustus/ingest/: __init__.py  index.py  loader.py  splitter.py
src/augustus/qa/: __init__.py  answer.py  prompt.py  retriever.py
src/augustus/utils/: __init__.py  file_tree.py  formatting.py  ignore.py
tests/: README.md  test_index.py  test_splitter.py
